# fofem

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fofem
FOF_DLL/: ANSI.BAT  ANSI.MAK  ANSI_MAI.CPP  AccumulateHMV.cpp  BMSoil.h  BM_Util.cpp  BUR_BOV.cpp  BUR_BRN - Copy.cpp  BUR_BRN-Jun-1-PreHerSrb.cpp  BUR_BRN.H  BUR_BRN.cpp  BoundaryIR_T1.cpp  BoundaryUBFD.cpp  BoundarydBFD.cpp  Brn_SFI.cpp  Brn_SFI.h  BuildLog.htm  CN_MatrixPop.h  Crank.h  CrankNicolson.cpp  DLL_MAI.CPP  FOFEM-Sav.vcproj  FOFEM.vcproj  FOF_BCM.H  FOF_BCM.cpp  FOF_BOL.H  FOF_BOL.cpp  FOF_CI.H  FOF_CM.cpp  FOF_CO.H  FOF_DLL.H  FOF_DLL.cpp  FOF_DUF.H  FOF_GEN.H  FOF_HSF.H  FOF_HSF.cpp  FOF_MRT.cpp  FOF_NES.cpp  FOF_NES.h  FOF_PF2.cpp  (+74 more)
FOF_GUI/: Abt_Frm.cpp  Abt_Frm.h  Abt_Frm.resx  AssemblyInfo.cpp  Aug22_New Ponderosa Pine Mortality equations for Black Hills.docx  BAT_BIF.H  BAT_BIF.cpp  BAT_BIF2.H  BAT_BOF.H  BAT_BOF.cpp  BAT_MISC.H  BAT_SIF.H  BAT_SIF.cpp  BM_Mngr.cpp  BUR_BUT.H  BUR_BUT.cpp  Bat_Frm.cpp  Bat_Frm.h  Bat_Mai-StartedToChange.cpp  Bat_Mai.cpp  Bat_MaiMrt.cpp  Bat_SamFil.cpp  Black_Hills_Seed_Sap_Over_Mort.xlsx  BrnUp-Bat.txt  CDF_UTIL.H  CVT_CVT.cpp  CVT_CVT.h  CVT_FCCS.CPP  CVT_FLM.CPP  CVT_NVCS.cpp  CVT_SAF.cpp  Emis_Frm.cpp  Emis_Frm.h  Emis_Frm.resX  F1.TXT  FOF-Rep-Pre.doc  FOF-Rep.doc  FOFEM-Version-Notes.txt  FOF_CLB.cpp  FOF_CVT.C  (+79 more)
FOF_UNIX/: Emission_Factors.csv  ansi_mai.cpp  brn_filesw.h  bur_bov.h  bur_brn.cpp  bur_brn.h  cdf_util.cpp  cdf_util.h  fof_ansi.h  fof_bcm.h  fof_cct.h  fof_ci.cpp  fof_ci.h  fof_cm.h  fof_co.cpp  fof_co.h  fof_co2.h  (+33 more)
(+171 files in other folders)
